Some corrections and changes about questions and attachments
