# app/Models/Question.php
@@ -6,6 +6,7 @@ use Illuminate\Database\Eloquent\Concerns\HasUlids;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 
 class Question extends Model
 {
@@ -34,5 +35,15 @@ class Question extends Model
     public function maintenanceBelongs(): BelongsTo
     {
         return $this->belongsTo(Maintenance::class, 'maintenance');
+    }
+
+    /**
+     * Get all of the attachments for the Question
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\HasMany
+     */
+    public function attachments(): HasMany
+    {
+        return $this->hasMany(Attachment::class, 'question', 'id');
     }
 }
